Bump deps + remove payout